adicionei mais um parágrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,6 +9,7 @@
 <body>
  <h1>curso git e github</h1>
  <hr> 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil provident quibusdam totam. Asperiores nesciunt nulla ea. Deleniti praesentium error iure laboriosam veniam illum quibusdam pariatur qui, facilis numquam ab libero!</p>  
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil provident quibusdam totam. Asperiores nesciunt nulla ea. Deleniti praesentium error iure laboriosam veniam illum quibusdam pariatur qui, facilis numquam ab libero!</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam saepe aliquid repudiandae voluptates impedit nesciunt enim fugit repellat nobis veniam. Voluptatibus eius accusantium facere eos vero est consequatur incidunt natus.</p>  
 </body>
 </html>
